--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/AlbertoLinde/Nuwe-Nested-Promises#readme",
   "dependencies": {
+    "csvtojson": "^2.0.10",
     "dotenv": "^10.0.0",
+    "googleapis": "^84.0.0",
     "inquirer": "^8.1.2"
   }
 }
